--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
         Hola alumnat de 1r de SMX grup c
+ 
+<a href="activitats.html
+
+">Entra directe a l'ctivitat 1 de format </a>
 </body>
 </html>
