--- a/activitats.html
+++ b/activitats.html
@@ -14,5 +14,10 @@
     <a href="html/02-formato/exer04.html">activitat 4</a><br/>
     <a href="html/02-formato/exer05.html">activitat 5</a><br/>
     <a href="html/02-formato/exer06.html">activitat 6</a><br/>
+    <a href="html/02-formato/exer07.html">activitat 7</a><br>
+    <h2>hipervincles</h2>
+    <a href="html/03-hipervincles/act01.html">activitat 1</a><br>
+    <a href="html/03-hipervincles/act02.html">activitat 2</a><br>
+    <a href="html/03-hipervincles/act03.html">activitat 3</a><br>
 </body>
 </html>  
