--- a/activitats.html
+++ b/activitats.html
@@ -19,5 +19,8 @@
     <a href="html/03-hipervincles/act01.html">activitat 1</a><br>
     <a href="html/03-hipervincles/act02.html">activitat 2</a><br>
     <a href="html/03-hipervincles/act03.html">activitat 3</a><br>
+    <h2>listas</h2>
+    <a href="html/03-hipervincles/act01.html">activitat 1</a><br>
+    <a href="html/03-hipervincles/act02.html">activitat 2</a><br>
 </body>
 </html>  
