--- a/html/05-imagenes/act01.html
+++ b/html/05-imagenes/act01.html
@@ -8,6 +8,15 @@
 <body>
     <h1>cafeteria</h1>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt sequi quidem sapiente nesciunt sint rem reiciendis voluptatum explicabo numquam beatae modi iusto quos repellendus, excepturi blanditiis! At vero aliquid deleniti!
-
+    <br/>
+    <h2>Dueño</h2>
+    <figure>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cat_November_2010-1a.jpg/250px-Cat_November_2010-1a.jpg" width="200"/>
+    </figure>
+    <h2>Competencia</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, soluta voluptate! Quis nostrum similique sit, nesciunt provident ex quos praesentium dignissimos ab quasi, minima cumque laborum ullam impedit dolorem quae.</p>
+    <figure>
+        <img src="https://static4.depositphotos.com/1008028/339/i/450/depositphotos_3391019-stock-photo-german-shepherd.jpg" width="200"/>
+    </figure>
 </body>
 </html>
