--- a/activitats.html
+++ b/activitats.html
@@ -20,8 +20,14 @@
     <a href="html/03-hipervincles/act02.html">activitat 2</a><br>
     <a href="html/03-hipervincles/act03.html">activitat 3</a><br>
     <h2>listas</h2>
-    <a href="html/03-hipervincles/act01.html">activitat 1</a><br>
-    <a href="html/03-hipervincles/act02.html">activitat 2</a><br>
-    <a href="html/03-hipervincles/act03.html">activitat 3</a><br>
+    <a href="html/04-listas/act01.html">activitat 1</a><br>
+    <a href="html/04-listas/act02.html">activitat 2</a><br>
+    <a href="html/04-listas/act03.html">activitat 3</a><br>
+    <a href="html/04-listas/act04.html">activitat 4</a><br>
+    <h2>imagenes</h2>
+    <a href="html/05-imagenes/act01.html">activitat 1</a><br>
+    <a href="html/05-imagenes/act02.html">activitat 2</a><br>
+    <a href="html/05-imagenes/act03.html">activitat 3</a><br>
+    <a href="html/05-imagenes/act04.html">activitat 4</a><br>
 </body>
 </html>  
