--- a/activitats.html
+++ b/activitats.html
@@ -29,5 +29,9 @@
     <a href="html/05-imagenes/act02.html">activitat 2</a><br>
     <a href="html/05-imagenes/act03.html">activitat 3</a><br>
     <a href="html/05-imagenes/act04.html">activitat 4</a><br>
+    <h2>tablas</h2>
+    <a href="html/06-tablas/act01.html">activitat 1</a><br>
+    <a href="html/06-tablas/act02.html">activitat 2</a><br>
+    <a href="html/06-tablas/act03.html">activitat 3</a><br>
 </body>
 </html>  
