--- a/html/06-tablas/act02.html
+++ b/html/06-tablas/act02.html
@@ -6,8 +6,52 @@
     <title>Document</title>
 </head>
 <body>
-    <th>Mis enemigos</th>
-    <td>nombre</td>apellidos<td>> hola</td>
-    <tr>bob</tr>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <table>
+    <thead>
+        <tr>
+            <h1>Titulo</h1>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellidos</th>
+            <th scope="col">Edad</th>
+             <th scope="col">Género</th>
+              <th scope="col">¿Por qué es mi enemigo?</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Dr. Somnífero</td>
+            <td>Pérez del Sueño</td>
+            <td>47</td>
+            <td>Masculino</td>
+            <td>Porque siempre aparece cuando tengo que estar concentrado y me da un sueño terrible.</td>
+        </tr>
+    </tbody>
+     <tbody>
+        <tr>
+            <td>Clara Contraseña</td>
+            <td>Olvidadiza López</td>
+            <td>32</td>
+            <td>Femenino</td>
+            <td>Nunca recuerda las contraseñas y me obliga a restablecer todo cada semana.</td>
+        </tr>
+    </tbody>
+    <tbody>
+        <tr>
+            <td>Don Lag</td>
+            <td>Internet Lento</td>
+            <td>54</td>
+            <td>Masculino</td>
+            <td>Porque arruina todas mis videollamadas importantes con su conexión a pedales.</td>
+        </tr>
+    </tbody>
+</table>
 </body>
-</html> 
+</html>
