--- a/html/06-tablas/act03.html
+++ b/html/06-tablas/act03.html
@@ -6,6 +6,55 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <thead>
+        <tr>
+            <h1>CURRICULUM VITAE</h1>
+            <th scope="col"><img src="https://www.shutterstock.com/image-vector/vector-flat-illustration-grayscale-avatar-600nw-2264922221.jpg"
+     alt="CURRICULUM"
+     width="175"
+     height="200"></th>
+     <h1>Imad Debbache</h1>
+    <ul>
+        <h1>Datos básicos</h1>
+    <li>642 999 999</li>
+    <li>ibenguedo1@inscaparrella.cat</li>
+    <li>25007 Lleida</li>
+     <h1>Experiencia.</h1>
+    <ul>
+    <li>Coordinadora de Marketing Digital — Agencia Creativa XYZ</li>
+    <ul>
+        <li>Enero 2022 Actualidad | Madrid
+
+Planificación y ejecución de campañas digitales en redes sociales y Google Ads.
+
+Gestión de un equipo de 5 personas en el área de contenidos.</li>
+        <li>Análisis de métricas y optimización de estrategias publicitarias.</li>
+    </ul>
+    <li>Gestora de Proyectos — Innovatech Solutions</li>
+    <ul>
+        <li>Junio 2019 Diciembre 2021 | Madrid
+
+Coordinación entre equipos técnicos y clientes.
+
+Implementación de metodologías ágiles (Scrum y Kanban).</li>
+        <li>Supervisión de proyectos tecnológicos desde la fase de planificación hasta la entrega.
+</li>
+    </ul>
+    <li>Ejecutiva de Cuentas — Agencia de Comunicación Bright</li>
+     <ul>
+        <li>Febrero 2016 Mayo 2019 | Barcelona
+Elaboración de estrategias de comunicación y relaciones públicas.
+
+Redacción de notas de prensa y gestión de eventos.</li>
+        <li>Atención personalizada a una cartera de más de 20 clientes corporativos.</li>
+    </ul>
+    <ul>
+        <h1>Habilidades</h1>
+    <li>Gestión de proyectos</li>
+    <li>Marketing digital y redes sociales</li>
+    <li>Liderazgo y trabajo en equipo</li>
+</ul>
+</ul>
+    </thead>
 </body>
 </html>
