--- a/html/06-tablas/act03.html
+++ b/html/06-tablas/act03.html
@@ -13,12 +13,12 @@
      alt="CURRICULUM"
      width="175"
      height="200"></th>
-     <h1>Imad Debbache</h1>
+     <h1>Ismail Elaouami</h1>
     <ul>
         <h1>Datos básicos</h1>
-    <li>642 999 999</li>
-    <li>ibenguedo1@inscaparrella.cat</li>
-    <li>25007 Lleida</li>
+    <li>642 666 666</li>
+    <li>Elmenor2@inscaparrella.cat</li>
+    <li>25180 Alcarras</li>
      <h1>Experiencia.</h1>
     <ul>
     <li>Coordinadora de Marketing Digital — Agencia Creativa XYZ</li>
