--- a/activitats.html
+++ b/activitats.html
@@ -33,5 +33,10 @@
     <a href="html/06-tablas/act01.html">activitat 1</a><br>
     <a href="html/06-tablas/act02.html">activitat 2</a><br>
     <a href="html/06-tablas/act03.html">activitat 3</a><br>
+    <h2>formularios</h2>
+    <a href="html/07-formularios/act01.html">activitat 1</a><br>
+    <a href="html/07-formularios/act02.html">activitat 2</a><br>
+    <a href="html/07-formularios/act03.html">activitat 3</a><br>
+    <a href="html/07-formularios/act04.html">activitat 4</a><br>
 </body>
 </html>  
